fix(Slider): proper image scaling on mobile

--- a/components/Home/HomeSlider.module.css
+++ b/components/Home/HomeSlider.module.css
@@ -5,4 +5,13 @@
     width: 100%;
     height: 100%;
     z-index: 0;
+    overflow: hidden;
+}
+
+.image {
+    width: 100%;
+    height: auto;
+    aspect-ratio: 1 / 1.5;
+    object-fit: cover;
+    min-width: 40rem;
 }
